# shymini

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  NOTICE  README.md  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
benches/: analytics.rs
e2e/: global-setup.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.json
e2e/lib/: fixtures.ts  server.ts
e2e/tests/: 01-dashboard.spec.ts  chart-updates.spec.ts  htmx.spec.ts  service-crud.spec.ts  service-detail.spec.ts  sessions.spec.ts  tracking.spec.ts
migrations/postgres/: 001_initial.sql  002_tracking_id.sql
migrations/sqlite/: 001_initial.sql  002_tracking_id.sql
scripts/: check.sh
src/: config.rs  error.rs  lib.rs  main.rs  state.rs
src/api/: mod.rs
src/cache/: mod.rs
src/dashboard/: handlers.rs  mod.rs  templates.rs
src/db/: mod.rs
src/domain/: mod.rs  models.rs  types.rs
src/geo/: mod.rs
src/ingress/: handlers.rs  mod.rs  processor.rs
src/privacy/: mod.rs
src/ua/: mod.rs
tasks/: 01-datetime-selection.md  02-fix-chart-on-htmx-reload.md
templates/: base.html
templates/components/: session_table.html  stats_content.html  stats_partial.html
templates/dashboard/: index.html  location_list.html  service.html  service_create.html  service_delete.html  service_update.html  session_detail.html  session_list.html
templates/ingress/: tracker.js  tracker_dnt.js
tests/: integration_tests.rs
workspace/frontend/: deno.json  server.ts
workspace/proxy/: deno.json  dev.ts  server.ts  test-page.html
