[package]
name = "shymini"
version = "0.1.0"
edition = "2021"
description = "Smol, performant web analytics"
license = "Apache-2.0"
default-run = "shymini"

[features]
default = ["sqlite"]
postgres = ["sqlx/postgres"]
sqlite = ["sqlx/sqlite"]

[[bin]]
name = "shymini"
path = "src/main.rs"

[[bin]]
name = "loadtest"
path = "src/bin/loadtest.rs"

[[bench]]
name = "analytics"
harness = false

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "chrono", "uuid"] }
askama = { version = "0.12", features = ["with-axum"] }
askama_axum = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
uuid = { version = "1", features = ["v4", "serde"] }
maxminddb = "0.27"
woothee = "0.13"
sha2 = "0.10"
ipnetwork = "0.21"
moka = { version = "0.12", features = ["future"] }
config = "0.15"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
regex = "1"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
tower = "0.5"
hex = "0.4"
url = "2"
rand = "0.9"
rand_distr = "0.5"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
criterion = { version = "0.8", features = ["async_tokio"] }
http-body-util = "0.1"
